13-kubernetes-config-01-objects/task1-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stage
  labels:
    namespace: stage
