13-kubernetes-config-01-objects/task2-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    namespace: production
