13-kubernetes-config-01-objects/task1-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: task1-db
  namespace: stage
  labels:
    app: task1-db
spec:
  ports:
  - port: 5432
    name: postges
  clusterIP: None
  selector:
    app: task1-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: task1-statefulset
  namespace: stage
  labels:
    app: task1-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task1-db
  serviceName: "task1-db"
  template:
    metadata:
      labels:
        app: task1-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: netology-db
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
          name: postges
