13-kubernetes-config-01-objects/task1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: task1-svc
  namespace: stage
  labels:
    app: task1-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: task1-app
