13-kubernetes-config-01-objects/task2-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: task2-db
  namespace: production
  labels:
    app: task2-db
spec:
  ports:
  - port: 5432
    name: postges
  clusterIP: None
  selector:
    app: task2-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: task2-statefulset
  namespace: production
  labels:
    app: task2-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task2-db
  serviceName: "task2-db"
  template:
    metadata:
      labels:
        app: task2-db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: netology-db
        image: postgres:13-alpine
        ports:
        - containerPort: 5432
          name: postges
