13-kubernetes-config-01-objects/task2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: task2-front
  namespace: production
  labels:
    app: task2-front
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: task2-front
---
apiVersion: v1
kind: Service
metadata:
  name: task2-back
  namespace: production
  labels:
    app: task2-back
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: task2-back
