13-kubernetes-config-01-objects/task1-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: task1-ingress
  namespace: stage
spec:
  rules:
  - host: task1.13-1.netology
    http:
      paths:
      - backend:
          serviceName: task1-svc
          servicePort: 80
