13-kubernetes-config-01-objects/task2-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: task2-ingress
  namespace: production
spec:
  rules:
  - host: task2.13-1.netology
    http:
      paths:
      - backend:
          serviceName: task2-front
          servicePort: 80
